--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
                     Semestre 1
                 </button>
                 <div class="dropdown-content">
-                    <a href="/pages/1_calculus.html"><span class="maths">·</span> Calculus</a>
-                    <a href="/pages/cours_1_2.html"><span class="maths">·</span> Méthodologie</a>
-                    <a href="/pages/cours_1_3.html"><span class="phys">·</span> Chimie générale</a>
-                    <a href="/pages/cours_1_3.html"><span class="phys">·</span> Cinématique du point</a>
-                    <a href="/pages/cours_1_3.html"><span class="phys">·</span> Électrocinétique 1</a>
-                    <a href="/pages/cours_1_3.html"><span class="phys">·</span> Électronique numérique 1</a>
-                    <a href="/pages/cours_1_3.html"><span class="phys">·</span> Optique géométrique</a>
-                    <a href="/pages/cours_1_3.html">Informatique 1</a>
+                    <a href="./pages/1_calculus.html"><span class="maths">·</span> Calculus</a>
+                    <a href="./pages/cours_1_2.html"><span class="maths">·</span> Méthodologie</a>
+                    <a href="./pages/cours_1_3.html"><span class="phys">·</span> Chimie générale</a>
+                    <a href="./pages/cours_1_3.html"><span class="phys">·</span> Cinématique du point</a>
+                    <a href="./pages/cours_1_3.html"><span class="phys">·</span> Électrocinétique 1</a>
+                    <a href="./pages/cours_1_3.html"><span class="phys">·</span> Électronique numérique 1</a>
+                    <a href="./pages/cours_1_3.html"><span class="phys">·</span> Optique géométrique</a>
+                    <a href="./pages/cours_1_3.html">Informatique 1</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -41,15 +41,15 @@
                     Semestre 2
                 </button>
                 <div class="dropdown-content">
-                    <a href="/pages/cours_2_2.html"><span class="maths">·</span> Algèbre linéaire 1</a>
-                    <a href="/pages/cours_2_2.html"><span class="maths">·</span> Suites et fonctions</a>
-                    <a href="/pages/cours_2_3.html"><span class="phys">·</span> Chimie cinétique</a>
-                    <a href="/pages/cours_2_3.html"><span class="phys">·</span> Électrocinétique 2</a>
-                    <a href="/pages/cours_2_3.html"><span class="phys">·</span> Électronique numérique 2</a>
-                    <a href="/pages/cours_2_3.html"><span class="phys">·</span> Mécanique fluide/solide</a>
-                    <a href="/pages/cours_2_3.html"><span class="phys">·</span> Optique ondulatoire</a>
-                    <a href="/pages/cours_2_3.html"><span class="phys">·</span> Thermodynamique</a>
-                    <a href="/pages/cours_2_3.html">Informatique 2</a>
+                    <a href="./pages/cours_2_2.html"><span class="maths">·</span> Algèbre linéaire 1</a>
+                    <a href="./pages/cours_2_2.html"><span class="maths">·</span> Suites et fonctions</a>
+                    <a href="./pages/cours_2_3.html"><span class="phys">·</span> Chimie cinétique</a>
+                    <a href="./pages/cours_2_3.html"><span class="phys">·</span> Électrocinétique 2</a>
+                    <a href="./pages/cours_2_3.html"><span class="phys">·</span> Électronique numérique 2</a>
+                    <a href="./pages/cours_2_3.html"><span class="phys">·</span> Mécanique fluide/solide</a>
+                    <a href="./pages/cours_2_3.html"><span class="phys">·</span> Optique ondulatoire</a>
+                    <a href="./pages/cours_2_3.html"><span class="phys">·</span> Thermodynamique</a>
+                    <a href="./pages/cours_2_3.html">Informatique 2</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -57,13 +57,13 @@
                     Semestre 3
                 </button>
                 <div class="dropdown-content">
-                    <a href="/pages/2_algebre_lineaire.html"><span class="maths">·</span> Algèbre linéaire 2</a>
-                    <a href="/pages/cours_3_2.html"><span class="maths">·</span> Analyse à plusieurs variables</a>
-                    <a href="/pages/cours_3_3.html"><span class="maths">·</span> Suites et séries</a>
-                    <a href="/pages/cours_3_3.html"><span class="phys">·</span> Électromagnétisme</a>
-                    <a href="/pages/cours_3_3.html"><span class="phys">·</span> Mécanique solide</a>
-                    <a href="/pages/cours_3_3.html"><span class="phys">·</span> Thermochimie</a>
-                    <a href="/pages/cours_3_3.html">Informatique 3</a>
+                    <a href="./pages/2_algebre_lineaire.html"><span class="maths">·</span> Algèbre linéaire 2</a>
+                    <a href="./pages/cours_3_2.html"><span class="maths">·</span> Analyse à plusieurs variables</a>
+                    <a href="./pages/cours_3_3.html"><span class="maths">·</span> Suites et séries</a>
+                    <a href="./pages/cours_3_3.html"><span class="phys">·</span> Électromagnétisme</a>
+                    <a href="./pages/cours_3_3.html"><span class="phys">·</span> Mécanique solide</a>
+                    <a href="./pages/cours_3_3.html"><span class="phys">·</span> Thermochimie</a>
+                    <a href="./pages/cours_3_3.html">Informatique 3</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -71,14 +71,14 @@
                     Semestre 4
                 </button>
                 <div class="dropdown-content">
-                    <a href="./pages/cours_1_1.html"><span class="maths">·</span> Équations différentielles</a>
-                    <a href="/pages/cours_1_2.html"><span class="maths">·</span> Probabilités</a>
-                    <a href="/pages/cours_1_3.html"><span class="maths">·</span> Suites et séries de fonctions</a>
-                    <a href="/pages/cours_1_2.html"><span class="phys">·</span> Mécanique des fluides</a>
-                    <a href="/pages/cours_1_2.html"><span class="phys">·</span> Mécanique quantique</a>
-                    <a href="/pages/cours_1_2.html"><span class="phys">·</span> Thermodynamique 2</a>
-                    <a href="/pages/cours_1_2.html"><span class="phys">·</span> Vibrations aux ondes</a>
-                    <a href="/pages/cours_1_2.html">Informatique 4</a>
+                    <a href="../pages/cours_1_1.html"><span class="maths">·</span> Équations différentielles</a>
+                    <a href="./pages/cours_1_2.html"><span class="maths">·</span> Probabilités</a>
+                    <a href="./pages/cours_1_3.html"><span class="maths">·</span> Suites et séries de fonctions</a>
+                    <a href="./pages/cours_1_2.html"><span class="phys">·</span> Mécanique des fluides</a>
+                    <a href="./pages/cours_1_2.html"><span class="phys">·</span> Mécanique quantique</a>
+                    <a href="./pages/cours_1_2.html"><span class="phys">·</span> Thermodynamique 2</a>
+                    <a href="./pages/cours_1_2.html"><span class="phys">·</span> Vibrations aux ondes</a>
+                    <a href="./pages/cours_1_2.html">Informatique 4</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -86,9 +86,9 @@
                     Semestre 5
                 </button>
                 <div class="dropdown-content">
-                    <a href="/pages/cours_2_2.html">Link1</a>
-                    <a href="/pages/cours_2_2.html">Link2</a>
-                    <a href="/pages/cours_2_3.html">Link3</a>
+                    <a href="./pages/cours_2_2.html">Link1</a>
+                    <a href="./pages/cours_2_2.html">Link2</a>
+                    <a href="./pages/cours_2_3.html">Link3</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -96,9 +96,9 @@
                     Semestre 6
                 </button>
                 <div class="dropdown-content">
-                    <a href="/pages/cours_3_2.html">Link1</a>
-                    <a href="/pages/cours_3_2.html">Link2</a>
-                    <a href="/pages/cours_3_3.html">Link3</a>
+                    <a href="./pages/cours_3_2.html">Link1</a>
+                    <a href="./pages/cours_3_2.html">Link2</a>
+                    <a href="./pages/cours_3_3.html">Link3</a>
                 </div>
             </div>
         </div>
