--- a/pages/1_calculus.html
+++ b/pages/1_calculus.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div class="navbar">
-            <a href="/" id="logo">
+            <a href="../" id="logo">
                 <img src="../images/logo.png" alt="" class="logo">
             </a>
             <div class="dropdown">
