--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="navbar">
-            <a href="/" id="logo">
+            <a href="./" id="logo">
                 <img src="./images/logo.png" alt="" class="logo">
             </a>
             <div class="dropdown">
@@ -26,7 +26,7 @@
                     Semestre 1
                 </button>
                 <div class="dropdown-content">
-                    <a href="./pages/1_calculus.html"><span class="maths">·</span> Calculus</a>
+                    <a href="/mpc/pages/1_calculus.html"><span class="maths">·</span> Calculus</a>
                     <a href="./pages/cours_1_2.html"><span class="maths">·</span> Méthodologie</a>
                     <a href="./pages/cours_1_3.html"><span class="phys">·</span> Chimie générale</a>
                     <a href="./pages/cours_1_3.html"><span class="phys">·</span> Cinématique du point</a>
