--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     Semestre 1
                 </button>
                 <div class="dropdown-content">
-                    <a href="/mpc/pages/1_calculus.html"><span class="maths">·</span> Calculus</a>
+                    <a href="./pages/1_calculus.html"><span class="maths">·</span> Calculus</a>
                     <a href="./pages/cours_1_2.html"><span class="maths">·</span> Méthodologie</a>
                     <a href="./pages/cours_1_3.html"><span class="phys">·</span> Chimie générale</a>
                     <a href="./pages/cours_1_3.html"><span class="phys">·</span> Cinématique du point</a>
