--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <a href="./pages/cours_1_2.html"><span class="maths">·</span> Méthodologie</a>
                     <a href="./pages/cours_1_3.html"><span class="phys">·</span> Chimie générale</a>
                     <a href="./pages/cours_1_3.html"><span class="phys">·</span> Cinématique du point</a>
-                    <a href="./pages/cours_1_3.html"><span class="phys">·</span> Électrocinétique 1</a>
-                    <a href="./pages/cours_1_3.html"><span class="phys">·</span> Électronique numérique 1</a>
+                    <a href="./pages/1_electrocinetique.html"><span class="phys">·</span> Électrocinétique 1</a>
+                    <a href="./pages/1_electronique_numerique.html"><span class="phys">·</span> Électronique numérique 1</a>
                     <a href="./pages/cours_1_3.html"><span class="phys">·</span> Optique géométrique</a>
                     <a href="./pages/cours_1_3.html">Informatique 1</a>
                 </div>
