--- a/pages/2_algebre_lineaire.html
+++ b/pages/2_algebre_lineaire.html
@@ -31,8 +31,8 @@
                     <a href="./cours_1_2.html"><span class="maths">·</span> Méthodologie</a>
                     <a href="./cours_1_3.html"><span class="phys">·</span> Chimie générale</a>
                     <a href="./cours_1_3.html"><span class="phys">·</span> Cinématique du point</a>
-                    <a href="./cours_1_3.html"><span class="phys">·</span> Électrocinétique 1</a>
-                    <a href="./cours_1_3.html"><span class="phys">·</span> Électronique numérique 1</a>
+                    <a href="./1_electrocinetique.html"><span class="phys">·</span> Électrocinétique 1</a>
+                    <a href="./1_electronique_numerique.html"><span class="phys">·</span> Électronique numérique 1</a>
                     <a href="./cours_1_3.html"><span class="phys">·</span> Optique géométrique</a>
                     <a href="./cours_1_3.html">Informatique 1</a>
                 </div>
