--- a/pages/1_electrocinetique.html
+++ b/pages/1_electrocinetique.html
@@ -29,11 +29,11 @@
                 <div class="dropdown-content">
                     <a href="./1_calculus.html"><span class="maths">·</span> Calculus</a>
                     <a href="./cours_1_2.html"><span class="maths">·</span> Méthodologie</a>
-                    <a href="./cours_1_3.html"><span class="phys">·</span> Chimie générale</a>
-                    <a href="./cours_1_3.html"><span class="phys">·</span> Cinématique du point</a>
+                    <a href="./1_chimie_generale.html"><span class="phys">·</span> Chimie générale</a>
+                    <a href="./1_cin_dyn.html"><span class="phys">·</span> Cinématique du point</a>
                     <a href="./1_electrocinetique.html"><span class="phys">·</span> Électrocinétique 1</a>
                     <a href="./1_electronique_numerique.html"><span class="phys">·</span> Électronique numérique 1</a>
-                    <a href="./cours_1_3.html"><span class="phys">·</span> Optique géométrique</a>
+                    <a href="./1_optique_geo.html"><span class="phys">·</span> Optique géométrique</a>
                     <a href="./cours_1_3.html">Informatique 1</a>
                 </div>
             </div>
@@ -182,6 +182,78 @@
                               </button>
                         </a>
                         <a href="../td/1_electrocinetique_t4.pdf" class="see_in_browser" target="_blank" style="text-decoration: none;">
+                            Ouvrir
+                        </a>
+                    </div>
+                </div>
+                <div class="chapter" style="display: flex; justify-content: space-evenly;">
+                    <div>
+                        <h4>Correction TD1</h4>
+                        <a href="../td/1_electrocinetique_t1_c.pdf" download="1_electrocinetique_t1_c" style="text-decoration: none;">
+                            <button class="button" type="button">
+                                <span class="button__text">Télécharger</span>
+                                <span class="button__icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35" id="bdd05811-e15d-428c-bb53-8661459f9307" data-name="Layer 2" class="svg"><path d="M17.5,22.131a1.249,1.249,0,0,1-1.25-1.25V2.187a1.25,1.25,0,0,1,2.5,0V20.881A1.25,1.25,0,0,1,17.5,22.131Z"></path><path d="M17.5,22.693a3.189,3.189,0,0,1-2.262-.936L8.487,15.006a1.249,1.249,0,0,1,1.767-1.767l6.751,6.751a.7.7,0,0,0,.99,0l6.751-6.751a1.25,1.25,0,0,1,1.768,1.767l-6.752,6.751A3.191,3.191,0,0,1,17.5,22.693Z"></path><path d="M31.436,34.063H3.564A3.318,3.318,0,0,1,.25,30.749V22.011a1.25,1.25,0,0,1,2.5,0v8.738a.815.815,0,0,0,.814.814H31.436a.815.815,0,0,0,.814-.814V22.011a1.25,1.25,0,1,1,2.5,0v8.738A3.318,3.318,0,0,1,31.436,34.063Z"></path></svg></span>
+                              </button>
+                        </a>
+                        <a href="../td/1_electrocinetique_t1_c.pdf" class="see_in_browser" target="_blank" style="text-decoration: none;">
+                            Ouvrir
+                        </a>
+                    </div>
+                    <div>
+                        <h4>Correction TD2</h4>
+                        <a href="../td/1_electrocinetique_t2_c.pdf" download="1_electrocinetique_t2_c" style="text-decoration: none;">
+                            <button class="button" type="button">
+                                <span class="button__text">Télécharger</span>
+                                <span class="button__icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35" id="bdd05811-e15d-428c-bb53-8661459f9307" data-name="Layer 2" class="svg"><path d="M17.5,22.131a1.249,1.249,0,0,1-1.25-1.25V2.187a1.25,1.25,0,0,1,2.5,0V20.881A1.25,1.25,0,0,1,17.5,22.131Z"></path><path d="M17.5,22.693a3.189,3.189,0,0,1-2.262-.936L8.487,15.006a1.249,1.249,0,0,1,1.767-1.767l6.751,6.751a.7.7,0,0,0,.99,0l6.751-6.751a1.25,1.25,0,0,1,1.768,1.767l-6.752,6.751A3.191,3.191,0,0,1,17.5,22.693Z"></path><path d="M31.436,34.063H3.564A3.318,3.318,0,0,1,.25,30.749V22.011a1.25,1.25,0,0,1,2.5,0v8.738a.815.815,0,0,0,.814.814H31.436a.815.815,0,0,0,.814-.814V22.011a1.25,1.25,0,1,1,2.5,0v8.738A3.318,3.318,0,0,1,31.436,34.063Z"></path></svg></span>
+                              </button>
+                        </a>
+                        <a href="../td/1_electrocinetique_t2_c.pdf" class="see_in_browser" target="_blank" style="text-decoration: none;">
+                            Ouvrir
+                        </a>
+                    </div>
+                    <div>
+                        <h4>Correction TD3</h4>
+                        <a href="../td/1_electrocinetique_t3_c.pdf" download="1_electrocinetique_t3_c" style="text-decoration: none;">
+                            <button class="button" type="button">
+                                <span class="button__text">Télécharger</span>
+                                <span class="button__icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35" id="bdd05811-e15d-428c-bb53-8661459f9307" data-name="Layer 2" class="svg"><path d="M17.5,22.131a1.249,1.249,0,0,1-1.25-1.25V2.187a1.25,1.25,0,0,1,2.5,0V20.881A1.25,1.25,0,0,1,17.5,22.131Z"></path><path d="M17.5,22.693a3.189,3.189,0,0,1-2.262-.936L8.487,15.006a1.249,1.249,0,0,1,1.767-1.767l6.751,6.751a.7.7,0,0,0,.99,0l6.751-6.751a1.25,1.25,0,0,1,1.768,1.767l-6.752,6.751A3.191,3.191,0,0,1,17.5,22.693Z"></path><path d="M31.436,34.063H3.564A3.318,3.318,0,0,1,.25,30.749V22.011a1.25,1.25,0,0,1,2.5,0v8.738a.815.815,0,0,0,.814.814H31.436a.815.815,0,0,0,.814-.814V22.011a1.25,1.25,0,1,1,2.5,0v8.738A3.318,3.318,0,0,1,31.436,34.063Z"></path></svg></span>
+                              </button>
+                        </a>
+                        <a href="../td/1_electrocinetique_t3_c.pdf" class="see_in_browser" target="_blank" style="text-decoration: none;">
+                            Ouvrir
+                        </a>
+                    </div>
+                    <div>
+                        <h4>Correction TD4</h4>
+                        <a href="../td/1_electrocinetique_t4_c.pdf" download="1_electrocinetique_t4_c" style="text-decoration: none;">
+                            <button class="button" type="button">
+                                <span class="button__text">Télécharger</span>
+                                <span class="button__icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35" id="bdd05811-e15d-428c-bb53-8661459f9307" data-name="Layer 2" class="svg"><path d="M17.5,22.131a1.249,1.249,0,0,1-1.25-1.25V2.187a1.25,1.25,0,0,1,2.5,0V20.881A1.25,1.25,0,0,1,17.5,22.131Z"></path><path d="M17.5,22.693a3.189,3.189,0,0,1-2.262-.936L8.487,15.006a1.249,1.249,0,0,1,1.767-1.767l6.751,6.751a.7.7,0,0,0,.99,0l6.751-6.751a1.25,1.25,0,0,1,1.768,1.767l-6.752,6.751A3.191,3.191,0,0,1,17.5,22.693Z"></path><path d="M31.436,34.063H3.564A3.318,3.318,0,0,1,.25,30.749V22.011a1.25,1.25,0,0,1,2.5,0v8.738a.815.815,0,0,0,.814.814H31.436a.815.815,0,0,0,.814-.814V22.011a1.25,1.25,0,1,1,2.5,0v8.738A3.318,3.318,0,0,1,31.436,34.063Z"></path></svg></span>
+                              </button>
+                        </a>
+                        <a href="../td/1_electrocinetique_t4_c.pdf" class="see_in_browser" target="_blank" style="text-decoration: none;">
+                            Ouvrir
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="line"></div>
+            <div class="content">
+                <div>
+                    <h3 class="chapter_title">
+                        TP
+                    </h3>
+                </div>
+                <div class="chapter" style="display: flex; justify-content: space-evenly;">
+                    <div>
+                        <h4>TP1 - Détermination de la caractéristique statique d’une pile</h4>
+                        <a href="../tp/1_electrocinetique_tp1.pdf" download="1_electrocinetique_tp1" style="text-decoration: none;">
+                            <button class="button" type="button">
+                                <span class="button__text">Télécharger</span>
+                                <span class="button__icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35" id="bdd05811-e15d-428c-bb53-8661459f9307" data-name="Layer 2" class="svg"><path d="M17.5,22.131a1.249,1.249,0,0,1-1.25-1.25V2.187a1.25,1.25,0,0,1,2.5,0V20.881A1.25,1.25,0,0,1,17.5,22.131Z"></path><path d="M17.5,22.693a3.189,3.189,0,0,1-2.262-.936L8.487,15.006a1.249,1.249,0,0,1,1.767-1.767l6.751,6.751a.7.7,0,0,0,.99,0l6.751-6.751a1.25,1.25,0,0,1,1.768,1.767l-6.752,6.751A3.191,3.191,0,0,1,17.5,22.693Z"></path><path d="M31.436,34.063H3.564A3.318,3.318,0,0,1,.25,30.749V22.011a1.25,1.25,0,0,1,2.5,0v8.738a.815.815,0,0,0,.814.814H31.436a.815.815,0,0,0,.814-.814V22.011a1.25,1.25,0,1,1,2.5,0v8.738A3.318,3.318,0,0,1,31.436,34.063Z"></path></svg></span>
+                              </button>
+                        </a>
+                        <a href="../tp/1_electrocinetique_tp1.pdf" class="see_in_browser" target="_blank" style="text-decoration: none;">
                             Ouvrir
                         </a>
                     </div>
