--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="dropdown-content">
                     <a href="./pages/1_calculus.html"><span class="maths">·</span> Calculus</a>
                     <a href="./pages/cours_1_2.html"><span class="maths">·</span> Méthodologie</a>
-                    <a href="./pages/cours_1_3.html"><span class="phys">·</span> Chimie générale</a>
+                    <a href="./pages/1_chimie_generale.html"><span class="phys">·</span> Chimie générale</a>
                     <a href="./pages/cours_1_3.html"><span class="phys">·</span> Cinématique du point</a>
                     <a href="./pages/1_electrocinetique.html"><span class="phys">·</span> Électrocinétique 1</a>
                     <a href="./pages/1_electronique_numerique.html"><span class="phys">·</span> Électronique numérique 1</a>
