--- a/pages/2_chimie.html
+++ b/pages/2_chimie.html
@@ -43,7 +43,7 @@
                 </button>
                 <div class="dropdown-content">
                     <a href="./cours_2_2.html"><span class="maths">·</span> Algèbre linéaire 1</a>
-                    <a href="./cours_2_2.html"><span class="maths">·</span> Suites et fonctions</a>
+                    <a href="./1_suites_fonctions.html"><span class="maths">·</span> Suites et fonctions</a>
                     <a href="./2_chimie.html"><span class="phys">·</span> Chimie cinétique</a>
                     <a href="./2_electrocinetique.html"><span class="phys">·</span> Électrocinétique 2</a>
                     <a href="./cours_2_3.html"><span class="phys">·</span> Électronique numérique 2</a>
