--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
                     Semestre 1
                 </button>
                 <div class="dropdown-content">
-                    <a href="./pages/1_calculus.html"><span class="maths">·</span> Calculus</a>
-                    <a href="./pages/cours_1_2.html"><span class="maths">·</span> Méthodologie</a>
-                    <a href="./pages/1_chimie_generale.html"><span class="phys">·</span> Chimie générale</a>
-                    <a href="./pages/cours_1_3.html"><span class="phys">·</span> Cinématique du point</a>
-                    <a href="./pages/1_electrocinetique.html"><span class="phys">·</span> Électrocinétique 1</a>
-                    <a href="./pages/1_electronique_numerique.html"><span class="phys">·</span> Électronique numérique 1</a>
-                    <a href="./pages/cours_1_3.html"><span class="phys">·</span> Optique géométrique</a>
-                    <a href="./pages/cours_1_3.html">Informatique 1</a>
+                    <a href="./1_calculus.html"><span class="maths">·</span> Calculus</a>
+                    <a href="./cours_1_2.html"><span class="maths">·</span> Méthodologie</a>
+                    <a href="./1_chimie_generale.html"><span class="phys">·</span> Chimie générale</a>
+                    <a href="./1_cin_dyn.html"><span class="phys">·</span> Cinématique du point</a>
+                    <a href="./1_electrocinetique.html"><span class="phys">·</span> Électrocinétique 1</a>
+                    <a href="./1_electronique_numerique.html"><span class="phys">·</span> Électronique numérique 1</a>
+                    <a href="./1_optique_geo.html"><span class="phys">·</span> Optique géométrique</a>
+                    <a href="./cours_1_3.html">Informatique 1</a>
                 </div>
             </div>
             <div class="dropdown">
