--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
                     <a href="./pages/1_suites_fonctions.html"><span class="maths">·</span> Suites et fonctions</a>
                     <a href="./pages/2_chimie.html"><span class="phys">·</span> Chimie cinétique</a>
                     <a href="./pages/2_electrocinetique.html"><span class="phys">·</span> Électrocinétique 2</a>
-                    <a href="./pages/cours_2_3.html"><span class="phys">·</span> Électronique numérique 2</a>
-                    <a href="./pages/cours_2_3.html"><span class="phys">·</span> Mécanique fluide/solide</a>
-                    <a href="./pages/cours_2_3.html"><span class="phys">·</span> Optique ondulatoire</a>
-                    <a href="./pages/1_thermo.html"><span class="phys">·</span> Thermodynamique</a>
-                    <a href="./pages/cours_2_3.html">Informatique 2</a>
+                    <a href="./pages/2_electronique_numerique.html"><span class="phys">·</span> Électronique numérique 2</a>
+                    <a href="./pages/1_meca_solide_et_fluide.html"><span class="phys">·</span> Mécanique fluide/solide</a>
+                    <a href="./pages/1_optique_ond.html"><span class="phys">·</span> Optique ondulatoire</a>
+                    <a href="./pages/1_thermo .html"><span class="phys">·</span> Thermodynamique</a>
+                    <a href="./pages/2_info.html">Informatique 2</a>
                 </div>
             </div>
             <div class="dropdown">
