--- a/pages/1_chimie_generale.html
+++ b/pages/1_chimie_generale.html
@@ -34,7 +34,7 @@
                     <a href="./1_electrocinetique.html"><span class="phys">·</span> Électrocinétique 1</a>
                     <a href="./1_electronique_numerique.html"><span class="phys">·</span> Électronique numérique 1</a>
                     <a href="./1_optique_geo.html"><span class="phys">·</span> Optique géométrique</a>
-                    <a href="./cours_1_3.html">Informatique 1</a>
+                    <a href="./2_info.html">Informatique 1</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -46,9 +46,9 @@
                     <a href="./1_suites_fonctions.html"><span class="maths">·</span> Suites et fonctions</a>
                     <a href="./2_chimie.html"><span class="phys">·</span> Chimie cinétique</a>
                     <a href="./2_electrocinetique.html"><span class="phys">·</span> Électrocinétique 2</a>
-                    <a href="./cours_2_3.html"><span class="phys">·</span> Électronique numérique 2</a>
-                    <a href="./cours_2_3.html"><span class="phys">·</span> Mécanique fluide/solide</a>
-                    <a href="./cours_2_3.html"><span class="phys">·</span> Optique ondulatoire</a>
+                    <a href="./2_electronique_numerique.html"><span class="phys">·</span> Électronique numérique 2</a>
+                    <a href="./1_meca_solide_et_fluide.html"><span class="phys">·</span> Mécanique fluide/solide</a>
+                    <a href="./1_optique_ond.html"><span class="phys">·</span> Optique ondulatoire</a>
                     <a href="./1_thermo.html"><span class="phys">·</span> Thermodynamique</a>
                     <a href="./cours_2_3.html">Informatique 2</a>
                 </div>
