--- a/pages/2_chimie.html
+++ b/pages/2_chimie.html
@@ -46,11 +46,11 @@
                     <a href="./1_suites_fonctions.html"><span class="maths">·</span> Suites et fonctions</a>
                     <a href="./2_chimie.html"><span class="phys">·</span> Chimie cinétique</a>
                     <a href="./2_electrocinetique.html"><span class="phys">·</span> Électrocinétique 2</a>
-                    <a href="./cours_2_3.html"><span class="phys">·</span> Électronique numérique 2</a>
-                    <a href="./cours_2_3.html"><span class="phys">·</span> Mécanique fluide/solide</a>
-                    <a href="./cours_2_3.html"><span class="phys">·</span> Optique ondulatoire</a>
+                    <a href="./2_electronique_numerique.html"><span class="phys">·</span> Électronique numérique 2</a>
+                    <a href="./1_meca_solide_et_fluide.html"><span class="phys">·</span> Mécanique fluide/solide</a>
+                    <a href="./1_optique_ond.html"><span class="phys">·</span> Optique ondulatoire</a>
                     <a href="./1_thermo.html"><span class="phys">·</span> Thermodynamique</a>
-                    <a href="./cours_2_3.html">Informatique 2</a>
+                    <a href="./2_info.html">Informatique 2</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -112,40 +112,6 @@
             <div class="content">
                 <div>
                     <h3 class="chapter_title">
-                        Cours
-                    </h3>
-                </div>
-                <div class="chapter" style="display: flex; justify-content: space-evenly;">
-                    <div>
-                        <h4>Introduction et rappels</h4>
-                        <a href="../cours/2_electrocinetique_1.pdf" download="2_electrocinetique_1" style="text-decoration: none;">
-                            <button class="button" type="button">
-                                <span class="button__text">Télécharger</span>
-                                <span class="button__icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35" id="bdd05811-e15d-428c-bb53-8661459f9307" data-name="Layer 2" class="svg"><path d="M17.5,22.131a1.249,1.249,0,0,1-1.25-1.25V2.187a1.25,1.25,0,0,1,2.5,0V20.881A1.25,1.25,0,0,1,17.5,22.131Z"></path><path d="M17.5,22.693a3.189,3.189,0,0,1-2.262-.936L8.487,15.006a1.249,1.249,0,0,1,1.767-1.767l6.751,6.751a.7.7,0,0,0,.99,0l6.751-6.751a1.25,1.25,0,0,1,1.768,1.767l-6.752,6.751A3.191,3.191,0,0,1,17.5,22.693Z"></path><path d="M31.436,34.063H3.564A3.318,3.318,0,0,1,.25,30.749V22.011a1.25,1.25,0,0,1,2.5,0v8.738a.815.815,0,0,0,.814.814H31.436a.815.815,0,0,0,.814-.814V22.011a1.25,1.25,0,1,1,2.5,0v8.738A3.318,3.318,0,0,1,31.436,34.063Z"></path></svg></span>
-                              </button>
-                        </a>
-                        <a href="../cours/2_electrocinetique_1.pdf" class="see_in_browser" target="_blank" style="text-decoration: none;">
-                            Ouvrir
-                        </a>
-                    </div>
-                    <div>
-                        <h4>Cours nouveautés</h4>
-                        <a href="../cours/2_electrocinetique_2.pdf" download="2_electrocinetique_2" style="text-decoration: none;">
-                            <button class="button" type="button">
-                                <span class="button__text">Télécharger</span>
-                                <span class="button__icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35" id="bdd05811-e15d-428c-bb53-8661459f9307" data-name="Layer 2" class="svg"><path d="M17.5,22.131a1.249,1.249,0,0,1-1.25-1.25V2.187a1.25,1.25,0,0,1,2.5,0V20.881A1.25,1.25,0,0,1,17.5,22.131Z"></path><path d="M17.5,22.693a3.189,3.189,0,0,1-2.262-.936L8.487,15.006a1.249,1.249,0,0,1,1.767-1.767l6.751,6.751a.7.7,0,0,0,.99,0l6.751-6.751a1.25,1.25,0,0,1,1.768,1.767l-6.752,6.751A3.191,3.191,0,0,1,17.5,22.693Z"></path><path d="M31.436,34.063H3.564A3.318,3.318,0,0,1,.25,30.749V22.011a1.25,1.25,0,0,1,2.5,0v8.738a.815.815,0,0,0,.814.814H31.436a.815.815,0,0,0,.814-.814V22.011a1.25,1.25,0,1,1,2.5,0v8.738A3.318,3.318,0,0,1,31.436,34.063Z"></path></svg></span>
-                              </button>
-                        </a>
-                        <a href="../cours/2_electrocinetique_2.pdf" class="see_in_browser" target="_blank" style="text-decoration: none;">
-                            Ouvrir
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="line"></div>
-            <div class="content">
-                <div>
-                    <h3 class="chapter_title">
                         TD
                     </h3>
                 </div>
@@ -198,6 +164,7 @@
                     </div>
                 </div>
             </div>
+        </div>
     </div>
 </body>
 </html>
