--- a/pages/1_chimie_generale.html
+++ b/pages/1_chimie_generale.html
@@ -108,6 +108,9 @@
         <div class="title_math title">
             <h1>Chimie générale</h1>
         </div>
+        <div>
+            <img src="../images/1_chimie_i1.png" alt="" class="symbole">
+        </div>
         <div class="body2">
             <div class="content">
                 <div>
